Fix collapse menu position, CSS adjustments
- Remove padding from portfolio containers on mobile
- Move collapse menu back to right on mobile
- Lighten backgrounds of portfolio boxes by 10%

--- a/src/css/bootstrap-navbar.css
+++ b/src/css/bootstrap-navbar.css
@@ -93,6 +93,7 @@
       padding-top: .7em;
       padding-bottom: .7em;
       top: 5.5rem;
+      right: 1em;
 
       -webkit-box-shadow: inset 0 0 1em 0.25em rgba(0,0,0,0.75);
       -moz-box-shadow: inset 0 0 1em 0.25em rgba(0,0,0,0.75);
