--- a/src/css/page_portfolio.css
+++ b/src/css/page_portfolio.css
@@ -1,6 +1,7 @@
 .portfolio > .row>* {
+    padding-left: 0;
+    padding-right: 0;
     margin-bottom: .5em;
-
     border-radius: 1em;
 }
 
@@ -11,7 +12,7 @@
 
 .portfolio .col-content {
     padding: 1em;
-    background-color: rgba(0, 0, 0, 0.85);
+    background-color: rgba(0, 0, 0, 0.75);
     border-radius: 1em;
 }
 
